example/android/app/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_fluttershallowblue_armeabi-v7a.stdout.txt
ninja: Entering directory `/Users/khadim/flutter_shallow_blue/example/android/app/.cxx/cmake/debug/armeabi-v7a'
[1/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp.o
FAILED: CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp.o 
/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=armv7-none-linux-androideabi16 --gcc-toolchain=/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/sysroot  -Dfluttershallowblue_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp.o -MF CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp.o.d -o CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp.o -c /Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:1:7: error: unknown type name 'CACHE_ALIGN'
const CACHE_ALIGN uint8_t globals::baseKPKW[24576] = {
      ^
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:1:26: error: expected ';' after top level declarator
const CACHE_ALIGN uint8_t globals::baseKPKW[24576] = {
                         ^
                         ;
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:1:27: error: use of undeclared identifier 'globals'
const CACHE_ALIGN uint8_t globals::baseKPKW[24576] = {
                          ^
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:2051:7: error: unknown type name 'CACHE_ALIGN'
const CACHE_ALIGN uint8_t globals::baseKPKB[24576] = {
      ^
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:2051:26: error: expected ';' after top level declarator
const CACHE_ALIGN uint8_t globals::baseKPKB[24576] = {
                         ^
                         ;
/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitbase.cpp:2051:27: error: use of undeclared identifier 'globals'
const CACHE_ALIGN uint8_t globals::baseKPKB[24576] = {
                          ^
6 errors generated.
[2/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/ecodata.cpp.o
[3/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/ecoinfo.cpp.o
[4/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitboard.cpp.o
[5/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bhash.cpp.o
[6/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/chess.cpp.o
[7/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/legal.cpp.o
[8/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/eco.cpp.o
[9/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/epdrec.cpp.o
[10/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/boardio.cpp.o
[11/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bitprobe.cpp.o
[12/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/calctime.cpp.o
[13/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bookwrit.cpp.o
[14/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp.o
FAILED: CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp.o 
/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++ --target=armv7-none-linux-androideabi16 --gcc-toolchain=/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64 --sysroot=/Users/khadim/Library/Android/sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/darwin-x86_64/sysroot  -Dfluttershallowblue_EXPORTS  -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC -MD -MT CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp.o -MF CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp.o.d -o CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp.o -c /Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp
/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp:282:25: error: no member named 'pollingThreadHandle' in namespace 'globals'; did you mean simply 'pollingThreadHandle'?
    if (pthread_create(&globals::pollingThreadHandle, NULL, inputPoll, p)) {
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                        pollingThreadHandle
/Users/khadim/flutter_shallow_blue/arasan-chess/src/arasanx.cpp:35:15: note: 'pollingThreadHandle' declared here
static THREAD pollingThreadHandle;
              ^
1 error generated.
[15/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/hash.cpp.o
[16/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/attacks.cpp.o
[17/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/learn.cpp.o
[18/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/globals.cpp.o
[19/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bench.cpp.o
[20/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/chessio.cpp.o
[21/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/board.cpp.o
[22/51] Building CXX object CMakeFiles/fluttershallowblue.dir/Users/khadim/flutter_shallow_blue/arasan-chess/src/bookread.cpp.o
ninja: build stopped: subcommand failed.
